--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
  					<h1>Priya Aggarwal</h1>
  					<h3>Computer Science Student</h3>
  					<div class="cv-btn">
- 						<a href="Priyaresume.docx">Download CV</a>
+ 						<a href="Priyaresume.docx">My Resume</a>
  					</div>
  				</div>
  			</div>
@@ -105,8 +105,8 @@
  			</div>
  			<div class="text">
  				<h4>I'M PRIYA AGGARWAL</h4>
- 				<p>I love websites and new ways to create them .Although I am a begineer in this field , I strive to look for more innovative ways to create websites thst not only impress me ,but the whole world .I am also an avid programmer .I love solving problems and issues with different and curious mindset.</p>
- 				<p>If you are looking for someone who is a learner,and had interest in solving problems with a different mindset,I am your person.</p>  
+ 				<p>I love websites and new ways to create them. Although I am a beginner in this field, I strive to look for more innovative ways to create websites that not only impress me, but the whole world. I am also an avid programmer. Highly organized with exceptional commitment to task completion and quality assurance when working with computer software programs.</p>
+ 				<p>If you are looking for someone who is a learner, and has interest in solving problems with a different mindset, I am your person.</p>  
  				<div class="info">
  					<div class="list">
  					<label>Birthday:</label>
@@ -128,7 +128,7 @@
 
  				</div>
  				<div class="social-links">
- 					<a href="https://www.linkedin.com/in/priya-aggarwal-b99809161"><i class="fa fa-linkedin"></i></a>
+ 					<a href="https://www.linkedin.com/in/-priya-aggarwal"><i class="fa fa-linkedin"></i></a>
  				</div>
  	</div>
  </div>
@@ -272,7 +272,7 @@
 				Priya
 			</div>
 			<div class="social">
-				<a href="https://www.linkedin.com/in/priya-aggarwal-b99809161"><i class="fa fa-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/-priya-aggarwal"><i class="fa fa-linkedin"></i></a>
 			</div>
 		</div>
 	</div>
