--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
  					<h1>Priya Aggarwal</h1>
  					<h3>Computer Science Student</h3>
  					<div class="cv-btn">
- 						<a href="Priyaresume.docx">My Resume</a>
+ 						<a href="Resume.pdf">My Resume</a>
  					</div>
  				</div>
  			</div>
